[package]
authors = ['Reef Finance <https://reef.finance>']
build = 'build.rs'
description = 'Reef Substrate Node'
edition = '2018'
homepage = 'https://reef.finance'
license = 'Unlicense'
name = 'reef-node'
repository = 'https://github.com/reef-defi/reef-chain'
version = '3.0.1'

[[bin]]
name = 'reef-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }

[dependencies]
hex-literal = "0.3.1"
jsonrpc-core = '15.1.0'
structopt = '0.3.8'
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", optional = true }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-cli = { git = "https://github.com/paritytech/substrate", default-features = false, features = ['wasmtime'], branch = "polkadot-v0.9.9" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-executor = { git = "https://github.com/paritytech/substrate", features = ['wasmtime'], branch = "polkadot-v0.9.9" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-service = { git = "https://github.com/paritytech/substrate", default-features = false ,features = ['wasmtime'], branch = "polkadot-v0.9.9" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }

sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }

sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }

sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }

node-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }

module-evm = { path = "../modules/evm" }
module-evm-rpc-runtime-api = { path = "../modules/evm/rpc/runtime_api" }
evm-rpc = { path = "../modules/evm/rpc" }

reef-primitives = { path = "../primitives" }

# runtime
reef-runtime = { path = '../runtime', version = '3.0.0' }

[features]
default = []
runtime-benchmarks = ['reef-runtime/runtime-benchmarks']
with-ethereum-compatibility = [
	"reef-runtime/with-ethereum-compatibility"
]
