[package]
authors = ['Reef Finance <https://reef.finance>']
build = 'build.rs'
description = 'Reef Substrate Node'
edition = '2018'
homepage = 'https://reef.finance'
license = 'Unlicense'
name = 'reef-node'
repository = 'https://github.com/reef-defi/reef-chain'
version = '4.0.0'

[[bin]]
name = 'reef-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }

[dependencies]
hex-literal = "0.3.1"
jsonrpc-core = '15.1.0'
structopt = '0.3.8'
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sc-cli = { git = "https://github.com/paritytech/substrate", default-features = false, features = ['wasmtime'], branch = "polkadot-v0.9.10" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sc-executor = { git = "https://github.com/paritytech/substrate", features = ['wasmtime'], branch = "polkadot-v0.9.10" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sc-service = { git = "https://github.com/paritytech/substrate", default-features = false ,features = ['wasmtime'], branch = "polkadot-v0.9.10" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }

sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }

sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }

sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }

node-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }

module-evm = { path = "../modules/evm" }
module-evm-rpc-runtime-api = { path = "../modules/evm/rpc/runtime_api" }
evm-rpc = { path = "../modules/evm/rpc" }

reef-primitives = { path = "../primitives" }

# runtime
reef-runtime = { path = '../runtime', version = '4.0.0' }

[features]
default = []
runtime-benchmarks = ['reef-runtime/runtime-benchmarks', 'node-runtime/runtime-benchmarks']
with-ethereum-compatibility = [
	"reef-runtime/with-ethereum-compatibility"
]
