[package]
authors = ['Reef <https://reef.io>']
build = 'build.rs'
description = 'Reef Node'
edition = '2018'
homepage = 'https://reef.io'
license = 'Unlicense'
name = 'reef-node'
repository = 'https://github.com/reef-defi/reef-chain'
version = '4.0.0'

[[bin]]
name = 'reef-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }

[dependencies]
hex-literal = "0.3.1"
jsonrpc-core = '15.1.0'
structopt = '0.3.8'
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
sc-cli = { git = "https://github.com/paritytech/substrate", default-features = false, features = ['wasmtime'], tag = "monthly-2022-09" }
sc-client-api = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
sc-executor = { git = "https://github.com/paritytech/substrate", features = ['wasmtime'], tag = "monthly-2022-09" }
sc-rpc = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
sc-service = { git = "https://github.com/paritytech/substrate", default-features = false ,features = ['wasmtime'], tag = "monthly-2022-09" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
sp-std = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
sp-api = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
sp-core = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
sp-inherents = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
sp-runtime = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }

sc-keystore = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
sp-keystore = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }

sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }

sp-consensus = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
sc-consensus = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }

kitchensink-runtime = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }

module-evm = { path = "../modules/evm" }
module-evm-rpc-runtime-api = { path = "../modules/evm/rpc/runtime_api" }
evm-rpc = { path = "../modules/evm/rpc" }

reef-primitives = { path = "../primitives" }

# runtime
reef-runtime = { path = '../runtime', version = '4.0.0' }

[features]
default = []
runtime-benchmarks = ['reef-runtime/runtime-benchmarks', 'kitchensink-runtime/runtime-benchmarks']
with-ethereum-compatibility = [
	"reef-runtime/with-ethereum-compatibility"
]
