[package]
authors = ['Reef Finance <https://reef.finance>']
edition = '2018'
homepage = 'https://reef.finance'
license = 'Unlicense'
name = 'reef-runtime'
repository = 'https://github.com/reef-defi/reef-chain'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = '4.0.0'

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
smallvec = "1.4.0"
hex-literal = { optional = true, version = '0.3.1' }
serde = { features = ['derive'], optional = true, version = '1.0.119' }
serde_json = "1.0.60"
evm = { version = "0.26.0", optional = true, default-features = false }

# Substrate dependencies
frame-benchmarking = { default-features = false, optional = true, version = '3.1.0' }
frame-executive = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-system-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
frame-system-rpc-runtime-api = { default-features = false, version = '3.0.0' }
pallet-balances = { default-features = false, version = '3.0.0' }
pallet-grandpa = { default-features = false, version = '3.0.0' }
pallet-indices = { version = "3.0.0", default-features = false }
pallet-randomness-collective-flip = { default-features = false, version = '3.0.0' }
pallet-scheduler = { version = "3.0.0", default-features = false }
pallet-sudo = { default-features = false, version = '3.0.0' }
pallet-timestamp = { default-features = false, version = '3.0.0' }
pallet-transaction-payment = { default-features = false, version = '3.0.0' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '3.0.0' }
sp-api = { version = "3.0.0", default-features = false }
sp-application-crypto = { version = "3.0.0", default-features = false }
sp-block-builder = { version = "3.0.0", default-features = false }
sp-core = { version = "3.0.0", default-features = false }
sp-inherents = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false }
sp-offchain = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-session = { version = "3.0.0", default-features = false }
sp-staking = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-transaction-pool = { version = "3.0.0", default-features = false }
sp-version = { version = "3.0.0", default-features = false }
libsecp256k1 = { version = "0.3.4", default-features = false, optional = true }

# NPoS
pallet-session = { version = "3.0.0", features = ["historical"], default-features = false }
pallet-staking = { version = "3.0.0", default-features = false }
pallet-staking-reward-curve = { version = "3.0.0", default-features = false }
pallet-authorship = { version = "3.0.0", default-features = false }
pallet-babe = { version = "3.0.0", default-features = false }
sp-consensus-babe = { version = "0.9.0", default-features = false }
pallet-im-online = { version = "3.0.0", default-features = false }
pallet-offences = { version = "3.0.0", default-features = false }
sp-authority-discovery = { version = "3.0.0", default-features = false }
pallet-authority-discovery = { version = "3.0.0", default-features = false }

pallet-identity = { version = "3.0.0", default-features = false }


# PoC
pallet-collective = { version = "3.0.0", default-features = false }
module-poc = { path = "../modules/poc", default-features = false }

# local dependencies
orml-traits = { path = "../orml/traits", default-features = false }
orml-tokens = { path = "../orml/tokens", default-features = false }
orml-authority = { path = "../orml/authority", default-features = false }
orml-benchmarking = { path = "../orml/benchmarking", default-features = false, optional = true }

module-currencies = { path = "../modules/currencies", default-features = false }

module-evm = { path = "../modules/evm", default-features = false }
module-evm-accounts = { path = "../modules/evm-accounts", default-features = false }
module-evm-bridge = { path = "../modules/evm-bridge", default-features = false }
module-evm-rpc-runtime-api = { path = "../modules/evm/rpc/runtime_api",  default-features = false }

module-transaction-payment = { path = "../modules/transaction_payment", default-features = false }
module-support = { path = "../modules/support", default-features = false }

primitives = { package = "reef-primitives", path = "../primitives", default-features = false }
runtime-common = { path = "common", default-features = false }


[dev-dependencies]
libsecp256k1 = "0.3.4"
hex = "0.4.0"
hex-literal = "0.3.1"


[features]
default = ['std']
std = [
	'codec/std',
	'serde',
	'frame-executive/std',
	'frame-support/std',
	'frame-system/std',
	'frame-system-rpc-runtime-api/std',
	"frame-benchmarking/std",
	'pallet-balances/std',
	'pallet-grandpa/std',
	"pallet-indices/std",
	'pallet-randomness-collective-flip/std',
	'pallet-sudo/std',
	"pallet-scheduler/std",
	'pallet-timestamp/std',
	'pallet-transaction-payment/std',
	'pallet-transaction-payment-rpc-runtime-api/std',
	"pallet-collective/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-authorship/std",
	"pallet-babe/std",
	"sp-consensus-babe/std",
	"sp-authority-discovery/std",
	"pallet-authority-discovery/std",
	"pallet-im-online/std",
	"pallet-offences/std",
	"pallet-identity/std",

	"sp-api/std",
	"sp-block-builder/std",
	"sp-core/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",

	"orml-traits/std",
	"orml-tokens/std",
	"orml-authority/std",
	"orml-benchmarking/std",

	"module-poc/std",
	"module-currencies/std",
	"module-evm/std",
	"module-evm-accounts/std",
	"module-evm-bridge/std",
	"module-transaction-payment/std",
	"module-support/std",

	"primitives/std",

	"runtime-common/std",

	"module-evm-rpc-runtime-api/std",
]
with-ethereum-compatibility = [
	"evm",
	"module-evm/with-ethereum-compatibility",
	"runtime-common/with-ethereum-compatibility",
]
runtime-benchmarks = [
	'hex-literal',
	"libsecp256k1/hmac",

	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system-benchmarking',
	'frame-system/runtime-benchmarks',
	'pallet-balances/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
	'sp-runtime/runtime-benchmarks',

	"orml-benchmarking",
	"orml-authority/runtime-benchmarks",

	"pallet-collective/runtime-benchmarks",
	"module-poc/runtime-benchmarks"
]
