[package]
authors = ['Reef Finance <https://reef.finance>']
edition = '2018'
homepage = 'https://reef.finance'
license = 'Unlicense'
name = 'reef-runtime'
repository = 'https://github.com/reef-defi/reef-chain'
version = '4.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
smallvec = "1.4.0"
hex-literal = { optional = true, version = '0.3.1' }
serde = { features = ['derive'], optional = true, version = '1.0.119' }
serde_json = "1.0.60"
evm = { version = "0.30.1", optional = true, default-features = false }
log = { version = "0.4.14", default-features = false }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10", optional = true }
frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10", optional = true }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
frame-election-provider-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
pallet-indices = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
pallet-utility = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
pallet-multisig = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
sp-offchain = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
sp-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
libsecp256k1 = { version = "0.3.4", default-features = false, optional = true }

# NPoS
pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false , features = ["historical"], branch = "polkadot-v0.9.10" }
pallet-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
pallet-authorship = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
pallet-babe = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
pallet-im-online = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
pallet-offences = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
pallet-authority-discovery = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }

pallet-identity = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }


# PoC
pallet-collective = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.10" }
module-poc = { path = "../modules/poc", default-features = false }

# local dependencies
orml-traits = { path = "../orml/traits", default-features = false }
orml-tokens = { path = "../orml/tokens", default-features = false }
orml-authority = { path = "../orml/authority", default-features = false }
orml-benchmarking = { path = "../orml/benchmarking", default-features = false, optional = true }

module-currencies = { path = "../modules/currencies", default-features = false }

module-evm = { path = "../modules/evm", default-features = false }
module-evm-accounts = { path = "../modules/evm-accounts", default-features = false }
module-evm-bridge = { path = "../modules/evm-bridge", default-features = false }
module-evm-rpc-runtime-api = { path = "../modules/evm/rpc/runtime_api",  default-features = false }

module-transaction-payment = { path = "../modules/transaction_payment", default-features = false }
module-support = { path = "../modules/support", default-features = false }

primitives = { package = "reef-primitives", path = "../primitives", default-features = false }
runtime-common = { path = "common", default-features = false }


[dev-dependencies]
libsecp256k1 = "0.3.4"
hex = "0.4.0"
hex-literal = "0.3.1"


[features]
default = ['std']
std = [
	'codec/std',
	'serde',
	'frame-executive/std',
	'frame-support/std',
	'frame-system/std',
	'frame-system-rpc-runtime-api/std',
	"frame-benchmarking/std",
	'frame-election-provider-support/std',
	'pallet-balances/std',
	'pallet-grandpa/std',
	"pallet-indices/std",
	'pallet-randomness-collective-flip/std',
	'pallet-sudo/std',
	"pallet-scheduler/std",
	'pallet-timestamp/std',
	'pallet-transaction-payment/std',
	'pallet-transaction-payment-rpc-runtime-api/std',
	"pallet-collective/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-authorship/std",
	"pallet-babe/std",
	"sp-consensus-babe/std",
	"sp-authority-discovery/std",
	"pallet-authority-discovery/std",
	"pallet-im-online/std",
	"pallet-offences/std",
	"pallet-identity/std",

	"sp-api/std",
	"sp-block-builder/std",
	"sp-core/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",

	"orml-traits/std",
	"orml-tokens/std",
	"orml-authority/std",
	"orml-benchmarking/std",

	"module-poc/std",
	"module-currencies/std",
	"module-evm/std",
	"module-evm-accounts/std",
	"module-evm-bridge/std",
	"module-transaction-payment/std",
	"module-support/std",

	"primitives/std",

	"runtime-common/std",

	"module-evm-rpc-runtime-api/std",
]
with-ethereum-compatibility = [
	"evm",
	"module-evm/with-ethereum-compatibility",
	"runtime-common/with-ethereum-compatibility",
]
runtime-benchmarks = [
	'hex-literal',
	"libsecp256k1/hmac",

	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system-benchmarking',
	'frame-system/runtime-benchmarks',
	'pallet-balances/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
	'sp-runtime/runtime-benchmarks',

	"orml-benchmarking",
	"orml-authority/runtime-benchmarks",

	"pallet-collective/runtime-benchmarks",
	"module-poc/runtime-benchmarks"
]
