[package]
name = "module-evm-accounts"
version = "0.7.3"
authors = ["Reef Developers"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false }
libsecp256k1 = { version = "0.3.4", default-features = false, features = ["hmac"] }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , tag = "monthly-2022-09" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , tag = "monthly-2022-09" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , tag = "monthly-2022-09" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , tag = "monthly-2022-09" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , tag = "monthly-2022-09" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , tag = "monthly-2022-09" }

orml-traits = { path = "../../orml/traits", default-features = false }

primitives = { package = "reef-primitives", path = "../../primitives", default-features = false }
module-support = { path = "../support", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", tag = "monthly-2022-09" }
orml-currencies = { path = "../../orml/currencies" }
orml-tokens = { path = "../../orml/tokens" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"libsecp256k1/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"primitives/std",
	"orml-traits/std",
	"module-support/std",
]
